bug in so1ion for Dx2 Dy2 Dz2 anisortopy rountine calc_ibmag removed

--- a/bin/bcfph_src/Makefile
+++ b/bin/bcfph_src/Makefile
@@ -22,6 +22,10 @@ vpath %.o  ./ ../../bin/src ../../bin/src/vector ../../bin/cf1ion_module ../../b
 #---------------------------------------------------------------------
 #  Operating system
 OSTYPE=$(shell uname)
+ifdef cross64
+OSTYPE=MINGW
+endif
+
 #  (linux windows)
 ifneq (,$(findstring $(OSTYPE),Linux))
  LINUX = linux
