--- a/bin/bfk_src/Makefile
+++ b/bin/bfk_src/Makefile
@@ -1,9 +1,18 @@
 #makefile for program bfk
-
-
 #  Operating system
 OSTYPE=$(shell uname)
-#  (linux windows)
+#
+FC=gfortran
+LINKER=gfortran
+ifdef cross64
+OSTYPE=MINGW
+CC=x86_64-w64-mingw32-gcc -pipe $(ARCHFLAG)
+CCC=x86_64-w64-mingw32-g++ -pipe $(ARCHFLAG)
+FC=x86_64-w64-mingw32-gfortran -pipe $(ARCHFLAG)
+LINKER=x86_64-w64-mingw32-gfortran -m64
+endif
+
+ # (linux windows)
 ifneq (,$(findstring $(OSTYPE),Linux))
  LINUX = linux
 else
@@ -11,7 +20,7 @@ ifneq (,$(findstring $(OSTYPE),Darwin))
  DARWIN = darwin
 else
  WINDOWS = windows
-ifneq (,$(findstring CYGWIN,$(shell uname)))
+ifneq (,$(findstring CYGWIN,$(OSTYPE)))
  CYGWIN=1
 endif
 endif
@@ -26,7 +35,7 @@ all :  clean bfk.o
 #../chibfk$(EXE) 
 
 bfk.o: bfk.f95
-	gfortran $(STATIC) -lgfortran -o ../bfk $^ 
+	$(FC) $(STATIC) -lgfortran -o ../bfk $^ 
 
 #../chibfk$(EXE): chibfk.f95
 #	gfortran -static -lgfortran -o ../chibfk $^ 
