--- a/bin/src/Makefile
+++ b/bin/src/Makefile
@@ -168,7 +168,7 @@ graphic_parameters.o: graphic_parameters.cpp graphic_parameters.hpp martin.h vec
 paramete.o: paramete.cpp paramete.hpp martin.h vector.h 
 	$(CCC) $(CFLAGS) $< 
 
-par.o: par.cpp par.hpp jjjpar.hpp martin.h vector.h ionpars.hpp
+par.o: par.cpp par.hpp jjjpar.hpp martin.h vector.h ionpars.hpp cryststruct.hpp
 	$(CCC) $(CFLAGS) $< 
 
 jjjpar.o: jjjpar.cpp par.hpp ionpars.hpp perlparse.h jjjpar_observables.cpp jjjpar_intmod_kramer.cpp jjjpar_intmod_brillouin.cpp jjjpar_intmod_cluster.cpp jjjpar_basmodfunc.cpp jjjpar.hpp martin.h vector.h myev.h
