simannfit mcphasit improved

--- a/doc/mcphas.ini
+++ b/doc/mcphas.ini
@@ -89,6 +89,16 @@ nofrndtries=5
 
 # maximum number of selfconsistency loops
 maxnofmfloops=1000
+# special cases usefule for testing possible spin configurations without convergence
+#(setting these values will ignore convergence limit maxstamf): 
+#   maxnofmfloops=1  do only a calculation of mean fields  using the initial 
+#                    spin configuration and evaluate free energy using original 
+#                    spins 
+#   maxnofmfloops=2  calculate meanfields and from these mean fields calculate
+#                    spins and evaluate free energy without doing further loops
+#                    to reach convergence
+
+
 
 # standard deviation - limit to end selfconsistency process
 # standard deviation is defined by ...sta=sqrt(sum_{i=1}^{n} (newmf-old mf)i^2/n)
