makenn changed -cfph option replaces original sipf file of magnetic atoms with phonon file

--- a/bin/src/Makefile
+++ b/bin/src/Makefile
@@ -83,12 +83,12 @@ endif
 # calculations
  threads=1
 # 
-#ifdef threads
+ifdef threads
 THREADFLAG=-D_THREADS
 ifdef LINUX
 THREADLINK=-lpthread
 endif
-#endif
+endif
 
 #---------------------------------------------------------------------
 # RCS options
