--- a/bin/ic1ion_module/libs/arpack/Makefile
+++ b/bin/ic1ion_module/libs/arpack/Makefile
@@ -33,12 +33,12 @@ include ../make.inc
 SOBJ  = sgetv0.o slaqrb.o sstqrb.o ssortc.o ssortr.o sstatn.o sstats.o \
 	snaitr.o snapps.o snaup2.o snaupd.o snconv.o sneigh.o sngets.o \
 	ssaitr.o ssapps.o ssaup2.o ssaupd.o ssconv.o sseigt.o ssgets.o \
-	sneupd.o sseupd.o ssesrt.o
+	sneupd.o sseupd.o ssesrt.o ssout.o
 
 DOBJ  = dgetv0.o dlaqrb.o dstqrb.o dsortc.o dsortr.o dstatn.o dstats.o \
 	dnaitr.o dnapps.o dnaup2.o dnaupd.o dnconv.o dneigh.o dngets.o \
 	dsaitr.o dsapps.o dsaup2.o dsaupd.o dsconv.o dseigt.o dsgets.o \
-	dneupd.o dseupd.o dsesrt.o
+	dneupd.o dseupd.o dsesrt.o dsout.o
 
 COBJ  = cnaitr.o cnapps.o cnaup2.o cnaupd.o cneigh.o cneupd.o cngets.o \
         cgetv0.o csortc.o cstatn.o
@@ -47,7 +47,8 @@ ZOBJ  = znaitr.o znapps.o znaup2.o znaupd.o zneigh.o zneupd.o zngets.o \
         zgetv0.o zsortc.o zstatn.o
 
 UOBJ  = arscnd.o dvout.o  iswap.o  zmout.o  cmout.o  icnteq.o ivout.o \
-        zvout.o  cvout.o  icopy.o  smout.o  dmout.o  iset.o   svout.o
+        zvout.o  cvout.o  icopy.o  smout.o  dmout.o  iset.o   svout.o \
+	isout.o ssout.o dsout.o
 
 #-----------------------------------------------------------------------
 ALLOBJ=$(SOBJ) $(DOBJ) $(COBJ) $(ZOBJ) $(UOBJ)
