... first test of loading class singleion_module from shared library

--- a/bin/ic1ion_module/Makefile
+++ b/bin/ic1ion_module/Makefile
@@ -182,7 +182,7 @@ HEADER = maths states ic1ion icpars icmf
 .PHONY: default all clean
 
 default: all
-all: ../ic1ionit$(EXE) ic1ion.so ../icf1ionit$(EXE) icf1ion.so
+all: ../ic1ionit$(EXE) ic1ion.so ../icf1ionit$(EXE) icf1ion.so ic1ion_mod.so
 
 # Defines some variables
 OBJ := $(foreach objs,$(OBJECT),$(objs).o)
@@ -241,6 +241,18 @@ else
 endif
 endif
 
+ic1ion_mod.o: ic1ion_mod.cpp
+ifdef integral
+	$(CC) $(CFLAGS) -D_INTEGRAL -I../include -I. -c $<
+else
+ifdef WINDOWS
+	$(CC) $(CFLAGS) -I../include -I. -DBUILD_DLL -c $<
+else
+	$(CC) $(CFLAGS) -I../include -I. -c $<
+endif
+endif
+
+
 icf1ion_module.o: icf1ion_module.cpp
 ifdef integral
 	$(CC) $(CFLAGS) -D_INTEGRAL -I../include -I. -c $<
@@ -254,6 +266,14 @@ ifdef WINDOWS
 	@$(LINKER) -o ic1ion.so ic1ion_module.o ic1ion.o truncate.o states.o  ../src/martin.o $(OBJ) $(VECOBJ) -shared $(LDFLAGS) -Wl,--out-implib,libic1ion_module.a
 else
 	@$(LINKER) -o ic1ion.so ic1ion_module.o ic1ion.o truncate.o states.o  ../src/martin.o $(OBJ) $(VECOBJ) -shared $(LDFLAGS)
+endif
+
+ic1ion_mod.so: checkgcc libs/liblapack.a $(OBJ) states.o ic1ion.o truncate.o ic1ion_mod.o  ../src/martin.o
+	@echo Linking $@
+ifdef WINDOWS
+	@$(LINKER) -o ic1ion_mod.so ic1ion_mod.o ic1ion.o truncate.o states.o  ../src/martin.o $(OBJ) $(VECOBJ) -shared $(LDFLAGS) -Wl,--out-implib,libic1ion_mod.a
+else
+	@$(LINKER) -o ic1ion_mod.so ic1ion_mod.o ic1ion.o truncate.o states.o  ../src/martin.o $(OBJ) $(VECOBJ) -shared $(LDFLAGS)
 endif
 
 ICFOBJ := par_io.o icpars.o cfp.o ic_diag.o maths.o njsyms.o states.o mmio.o ../src/martin.o # lovesey.o icmf.o ic_hmltn.o coulomb.o so_cf.o
